fixed overflow

--- a/css/_albums.scss
+++ b/css/_albums.scss
@@ -1,4 +1,5 @@
 #albums {
+  overflow-x: hidden;
   padding: 2rem;
   background: rgb(19, 19, 19);
   background: linear-gradient(
